<resources>
    <string name="app_name">photoLab</string>
    <string name="filtermessage">Swipe the photo or choose from the menu to change the filter.</string>
    <string name="splash_app_name">Afshan\'s Photo Lab</string>
    <string name="tagLine">Gift wrap memories.</string>
    <string name="insertPhoto">Add photo </string>
    <string name="takePhoto">Take photo</string>
    <string name="crop">Crop</string>
    <string name="filter">Filters</string>
    <string name="fit">Fit</string>
    <string name="effects">Effects</string>
    <string name="funTools">fun tools</string>
    <string name="text">Text</string>
    <string name="zoom">zoom:</string>
    <string name="instaPost">Insta post</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="background">Background:</string>
    <string name="blur">Blur</string>
    <string name="color">Color</string>
    <string name="brightness">Brightness:</string>
    <string name="saturation">Saturation:</string>
    <string name="hue">Hue:</string>
    <string name="font">Font:</string>
    <string name="rotate">Type custom degrees</string>
    <string name="freeCrop">free crop</string>
    <string name="fbPost">Fb post</string>
    <string name="tinder">Tinder</string>
    <string name="circle">Circle</string>
    <string name="landscape">16:9</string>
    <string name="rotate90l">Rotate 90 L </string>
    <string name="rotate90r">Rotate 90 R</string>
    <string name="Crop_rotate">Crop | Rotate</string>
    <string name="Font_color">Font color:</string>
    <string name="selectPic">Select photo</string>
    <string name="professional">Pro </string>
    <string name="black_and_white">B &amp; W </string>
    <string name="special">Specials </string>
    <string name="monochrome">Premium </string>
    <string name="vignette">Specials+</string>
    <string name="level">Level:</string>
    <string name="close">Remove Filter</string>
    <string name="compare">Compare</string>
    <string name="filter_name">Type</string>
    <string name="original">Original</string>
    <string name="edited">Edited</string>
    <string name="Effects">Effects</string>
    <string name="Eraser">Eraser</string>
    <string name="brush">Brush</string>
    <string name="launchingLab">Sorry. Error code : 2</string>
    <string name="settingActionBar">Sorry. Error code : 3</string>
    <string name="startingIntroVideo">Sorry. Error code : 4</string>
    <string name="creatingFragment">Sorry. Error code : 5</string>
    <string name="loadingImage">Sorry. Error code : 6</string>
</resources>
