<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter_name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:fontFamily="@font/assistant_extralight" />

    <LinearLayout
        android:id="@+id/filter_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/professional"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/assistant_extralight" />

        <TextView
            android:id="@+id/black_and_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/black_and_white"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/assistant_extralight" />

        <TextView
            android:id="@+id/picasso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/picasso"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/assistant_extralight" />

        <TextView
            android:id="@+id/special"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/special"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/assistant_extralight" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>