<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/text"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:fontFamily="@font/assistant_extralight"
        android:textSize="20sp"
        android:background="@color/grey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font"
        android:textColor="@color/black"
        app:fontFamily="@font/assistant_extralight"
        android:textSize="12sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:background="#99ffffff"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#99ffffff"
            android:text="@string/Font_color"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:fontFamily="@font/assistant_extralight" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/color" />
    </LinearLayout>


</LinearLayout>